[package]
name = "proxit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
rlua = "0.19.1"

colored = "2.0.0"

serde = "1.0.137"
serde_json = "1.0.81"
lazy_static = "1.4.0"