[package]
name = "proxit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
rlua = "0.19.1"

colored = "2.0.0"

serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
lazy_static = "1.4.0"
deadqueue = "0.2.2"
actix-web = "4.1.0"
randua = "0.1.6"
anyhow = "1.0.57"